feat: update cv

--- a/index.html
+++ b/index.html
@@ -6,90 +6,106 @@
   <title>Curriculum Vitae</title>
   </head>
   <body>
-  <header>
-  <h1>Curicculum Vitae</h1>
-  
-  <hr>
-  
-  <h2>Evgenia <em>Labokha</em></h2>
-  
-  <img class="photo" src="https://i.imgur.com/4arRSRm.jpg" alt="photo">
-  
-  <hr>
-  
-  <h2><a href="mailto:eugenia.labokha@yandex.by" target="_blanck">eugenia.labokha@yandex.by</a><h2>
-  
-  </header>
-  
-  <main>
-  
-  <section>
-  <h3>Summary</h3>
-
-<p>My goal is to become frontend developer and to work on different projects. I know basics of HTML and CSS.</p>
-
-<hr>
-
-</section>
-
-<section>
-
-<h3>Skills</h3>
-
-<p>I'm currently learning JS.</p>
-
-<p><em>Code examples</em></p>
-
-<code>const multiplyNumberFromRange = (start, finish) => {<br>
-
-let i = start;</br>
-
-let mult = 1; // инициализация умножения</br>
-
-while (i <= finish) { //будет выполняться, пока не дойдет до конечного числа</br>
-
-  `mult = mult * i; `</br>
-  
- ` i = i + 1;`</br>
-};</br>
-
-return mult;</br>
-
-};</br>
-
-// END</code>
-
-<hr>
-
-</section>
-
-<section>
-
-<h3>Experience</h3>
-
-<p>I have no experience so far.</p>
-
-<p>My profile on codewars is <a href="https://www.codewars.com/users/Angoulema" target="_blanck">here</a>.</p>
-
-<hr>
-
-</section>
-
-<section>
-
-<h3>Education</h3>
-
-<p>Currently I study at RS-School.</p>
-
-<hr>
-
-</section>
-
-<section>
-<h3>English</h3>
-
-<p>My English is on B2&ndash;B1 level approximately. I read in English regilarly and use spocken English while being abroad.</p>
-  </section>
-  </main>
+    <header>
+      <h1>Curicculum Vitae</h1>
+      <hr>
+      <h2><em></em>Evgenia Labokha</em></h2>
+      <img class="photo" src="https://i.imgur.com/4arRSRm.jpg" alt="photo">
+      <h3>Contact info:</h3>
+      <p>
+        <a href="mailto:eugenia.labokha@yandex.by" target="_blank">eugenia.labokha@yandex.by</a>
+      </p>
+    </header> 
+    <main>
+      <section>
+        <h3>Summary</h3>
+        <p>Initially I'm an editor. My goal is to become frontend developer and to work on different projects.</p>
+      </section>
+      <section>
+        <h3>Skills</h3>
+        <ul>
+          <li>HTML5</li>
+          <li>CSS3, SASS</li>
+          <li>Git</li>
+          <li>Vanilla JS</li>
+          <li>React</li>
+          <li>eslint airbnb</li>
+        </ul>
+        <h3>Code examples</h3>
+        <p>My profile on codewars is <a href="https://www.codewars.com/users/Angoulema" target="_blanck">here</a>.</p>
+      </section>
+      <section>
+        <h3>Experience</h3>
+        <p>I finished JS/FE 2020-q3 course by RS-School in the top-100 (my score position is 69).</p>
+        <p>Mostly I worked with Vanilla JS, but some tasks (COVID-Dashboard, RS-Clone) I wrote on React as well 
+          (our team was writing with Hooks in both cases).</p>
+        <h4>The key tasks I did at RS-School:</h4>
+        <ul>
+          <li>
+            <a href="https://rolling-scopes-school.github.io/angoulema-JS2020Q3/shelter/pages/main/main.html">
+              Shelter
+            </a>
+          </li>
+          <li>
+            <a href="https://rolling-scopes-school.github.io/angoulema-JS2020Q3/momentum/">
+              Momentum
+            </a>
+          </li>
+          <li>
+            <a href="https://rolling-scopes-school.github.io/angoulema-JS2020Q3/virtual-keyboard/">
+              Virtual keyboard
+            </a>
+          </li>
+          <li>
+            <a href="https://rolling-scopes-school.github.io/angoulema-JS2020Q3/gem-puzzle/">
+              Gem-puzzle
+            </a>
+          </li>
+          <li>
+            <a href="https://rolling-scopes-school.github.io/angoulema-JS2020Q3/english-for-kids/">
+              English for kids
+            </a>
+          </li>
+          <li>
+            <a href="https://youtu.be/LBSzpaPA8Vg">
+              Video-presentation
+            </a> 
+            (the topic is Grid layout)</li>
+          <li>
+            <a href="https://angoulema-covid-dashboard.netlify.app">
+              COVID-dashboard
+            </a>
+            (team work).
+            <a href="https://github.com/shcherbak-ssa/covid-dashboard">Soursecode.</a>
+            </li>
+          <li>
+            <a href="https://magic-buttons-from-fabulous-team.netlify.app">
+              RS-Clone aka Magic buttons
+            </a> 
+            (team work).
+            <a href="https://github.com/AV-Shell/rsclone">Soursecode.</a>
+          </li>
+        </ul>
+      </section>
+      <section>   
+        <h3>Education</h3>
+        <ul>
+          <li>BSTU, Faculty of Printing and Publishing, major at Publishing (2013)</li>
+          <li>BSTU, Faculty of Printing and Publishing, Master of Journalism (2014)</li>
+          <li>BSTU, Faculty of Printing and Publishing, postgraduate studies (2017)</li>
+          <li>JS/FE 2020-q3 by RS-School (2021)</li>
+        </ul>
+      </section>
+      <section>
+        <h3>Languages</h3>
+        <ul>
+          <li>Belarusian &ndash; native speaker</li>
+          <li>Russian &ndash; native speaker</li>
+          <li>English &ndash; B1/B2</li>
+          <li>Polish &ndash; A2</li>
+        </ul>
+        <p>My English is on B2&ndash;B1 level approximately. I read in English regularly and use spoken English while being abroad.</p>
+      </section>
+    </main>
   </body>
 </html>
